--- a/main.html
+++ b/main.html
@@ -1,1 +1,9 @@
-<p> hi <p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>NoProjects</title>
+</head>
+<body>
+    <p>NoProjects is currently under construction, check back later!<p>
+</body>
+</html>
