--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
+
 <head>
-    <title>NoProjects</title>
-    </head>
+  <h1> Noprojects </h1>
+</head>
+
 <body>
-    <br>
-    <br>
-    <p>NoProjects is currently under construction, check back later!<p>
+  <p> fuck off pussy <p>
 </body>
-</html>
