--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <h1> Noprojects </h1>
+  <h1> NoProject </h1>
 </head>
 
 <body>
-  <p> fuck off pussy <p>
+  <p> NoProjects.net is still UNDER CONSTRUCTION! Check back later <p>
+    <br>
+    <br>
+  <img src="construction.png" alt="cock">
 </body>
