--- a/index.html
+++ b/index.html
@@ -2,12 +2,27 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <h1> NoProject </h1>
+  <div id="start"></div>
+
+  <nav>
+    <ul>
+      <h1>NoProjects</h1>
+      <li><a href="https://github.com/Viper-Development-Team/viper-website">GitHub</a></li>
+      <li><h2>This website is not made for mobile yet.</h2></li>
+    </ul>
+  </nav>
+
+  <header>
+      <div class="bg">
+        <div class="content">
 </head>
 
-<body>
-  <p> NoProjects.net is still UNDER CONSTRUCTION! Check back later <p>
+<body style="background-image: url('background.png');">
+    <p> NoProjects.net is still UNDER CONSTRUCTION! Check back later <p>
     <br>
-    <br>
-  <img src="construction.png" alt="cock">
+    <img src="construction.png" alt="cock">
 </body>
+
+<footer>
+  <p>if anyone knows where i can get drugs (preferably mushrooms or lsd) for less than 100 dollars please send me at vito#2283 thanks i need it</p>
+</footer>
