--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Main | NoProjects</title>
+    <link rel="shortcut icon" type="image/x-icon" href"favicon.ico"/>
+    <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400&display=swap" rel="stylesheet">
+</head>
 
-<head>
-  <div id="start"></div>
 
+<body>
   <nav>
     <ul>
-      <h1>NoProjects</h1>
-      <li><a href="https://github.com/Viper-Development-Team/viper-website">GitHub</a></li>
-      <li><h2>This website is not made for mobile yet.</h2></li>
+      <li><a href="https://github.com/noprojects/noprojects.net">
+        Github</a></li>
+      <li><a href="https://patreon.com/noprojects">
+        Patreon</a></li>
+      <li><h2>NoProjects</h2></l1>
     </ul>
   </nav>
 
   <header>
-      <div class="bg">
-        <div class="content">
-</head>
 
-<body style="background-image: url('background.png');">
-    <p> NoProjects.net is still UNDER CONSTRUCTION! Check back later <p>
-    <br>
-    <img src="construction.png" alt="cock">
+  </header>
+  <footer></footer>
 </body>
-
-<footer>
-  <p>if anyone knows where i can get drugs (preferably mushrooms or lsd) for less than 100 dollars please send me at vito#2283 thanks i need it</p>
-</footer>
+</html>
