--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Main | NoProjects</title>
-    <link rel="shortcut icon" type="image/x-icon" href"favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href"img/favicon.ico"/>
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400&display=swap" rel="stylesheet">
 </head>
@@ -17,12 +17,19 @@
         Github</a></li>
       <li><a href="https://patreon.com/noprojects">
         Patreon</a></li>
+      <li><h2>This site is <bold>UNFINISHED</bold>.</h2></li>
     </ul>
   </nav>
 
-  <header>
-
-  </header>
-  <footer></footer>
+  <div class="Main">
+    <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+    <p> 12345678910 </p>
+    <br>
+    <p> 12345678910 </p>
+    <br>
+    <p> 12345678910 </p>
+    <br>
+    <p> 12345678910 </p>
+  </div>
 </body>
 </html>
