--- a/index.html
+++ b/index.html
@@ -12,24 +12,28 @@
 <body>
   <nav>
     <ul>
-      <li><h2>NoProjects</h2></l1>
-      <li><a href="https://github.com/noprojects/noprojects.net">
-        Github</a></li>
-      <li><a href="https://patreon.com/noprojects">
-        Patreon</a></li>
-      <li><h2>This site is <bold>UNFINISHED</bold>.</h2></li>
+      <h2>NoProjects</h2>
+      <h2>This site is <bold>UNFINISHED</bold>.</h2>
     </ul>
   </nav>
 
   <div class="Main">
     <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-    <p> 12345678910 </p>
+    <p> Replacement Text for a link to Vito's Page. </p>
     <br>
-    <p> 12345678910 </p>
+    <p> Replacement Text for a link to Minf's Page. </p>
     <br>
-    <p> 12345678910 </p>
+    <p> Replacement Text for a link to Zumo's Page. </p>
     <br>
-    <p> 12345678910 </p>
+    <p> Replacement Text for a <li><a href="jj/jjito.html"> link</li></a> to JJ's page. </p>
   </div>
 </body>
+
+<div class="promotion">
+  <li><a href="https://github.com/noprojects/noprojects.net">
+    <img src="img/github.png" width="40" height="40">GITHUB</a></li>
+  <li><a href="https://patreon.com/noprojects">
+    <img src="img/patreon.png" width="40" height="40">PATREON</a></li>
+</div>
+
 </html>
