--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
 <div class="promotion">
   <li><a href="https://github.com/noprojects/noprojects.net">
-    <img src="img/github.png" width="40" height="40">GITHUB</a></li>
+    <img src="img/github.png" width="40" height="40"></a></li>
   <li><a href="https://patreon.com/noprojects">
-    <img src="img/patreon.png" width="40" height="40">PATREON</a></li>
+    <img src="img/patreon.png" width="40" height="40"></a></li>
 </div>
 
 </html>
