--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <br>
     <p> Replacement Text for a link to Zumo's Page. </p>
     <br>
-    <p> Replacement Text for a <li><a href="jj/jjito.html"> link</li></a> to JJ's page. </p>
+    <p> Replacement Text for a <li><a href="jj/jjito"> link</li></a> to JJ's page. </p>
   </div>
 </body>
 
