--- a/index.html
+++ b/index.html
@@ -1,39 +1,94 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Main | NoProjects</title>
-    <link rel="shortcut icon" type="image/x-icon" href"img/favicon.ico"/>
-    <link rel="stylesheet" href="index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400&display=swap" rel="stylesheet">
+
+<head>
+  <meta charset="utf-8">
+  <title>Main | NoProjects</title>
+  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+  <link rel="stylesheet" href="index.css">
 </head>
 
-
 <body>
-  <nav>
-    <ul>
-      <h2>NoProjects</h2>
-      <h2>This site is <bold>UNFINISHED</bold>.</h2>
-    </ul>
-  </nav>
+  <div class="header">
+    <nav>
+      <ul>
+        <li><img src="img/favicon.png" height="50" width="50"></li>
+        <li><h1>NoProjects</h1></li>
+        <li><h2>This site is <bold>UNFINISHED</bold>.</h2></li>
+      </ul>
+    </nav>
+  </div>
 
-  <div class="Main">
-    <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-    <p> Replacement Text for a link to Vito's Page. </p>
-    <br>
-    <p> Replacement Text for a link to Minf's Page. </p>
-    <br>
-    <p> Replacement Text for a link to Zumo's Page. </p>
-    <br>
-    <p> Replacement Text for a <li><a href="jj/jjito"> link</li></a> to JJ's page. </p>
+  <div class="main-section">
+    <div class="image-wrapper">
+      <img src="img/hahathanks.gif" width="70" height="70">
+    </div>
+    <div class="descrip">
+      <p>
+        (totally super cool text here)
+      </p>
+    </div>
+  </div>
+
+  <div class="people">
+
+    <div class="vito">
+      <div class="image">
+        <img src="img/island.png" width="50" height="50">
+      </div>
+      <div class="who">
+        <p>
+          vito is the stupidass who made this dum website
+        </p>
+      </div>
+    </div>
+
+      <div class="jj">
+        <div class="image">
+          <img src="img/island.png" width="50" height="50">
+        </div>
+        <div class="who">
+          <p>
+            jj is some gay boy who helps test shit
+          </p>
+        </div>
+    </div>
+
+    <div class="zumo">
+      <div class="image">
+        <img src="img/island.png" width="50" height="50">
+      </div>
+      <div class="who">
+        <p>
+          zumo dates gay boy and helps design stuff
+        </p>
+      </div>
+    </div>
+
+    <div class="minfs">
+      <div class="image">
+        <img src="img/island.png" width="50" height="50">
+      </div>
+      <div class="who">
+        <p>
+          minfs is literally smarter than all of us we worship him
+        </p>
+      </div>
+    </div>
+
+  </div>
+
+
+  <div class="promotion">
+    <div class="cloumn">
+      <a href="https://github.com/noprojects/noprojects.net">
+        <img src="img/github.png" style="width:5%">
+      </a>
+      <a href="https://patreon.com/noprojects">
+        <img src="img/patreon.png" style="width:5%">
+      </a>
+    </div>
   </div>
 </body>
-
-<div class="promotion">
-  <li><a href="https://github.com/noprojects/noprojects.net">
-    <img src="img/github.png" width="40" height="40"></a></li>
-  <li><a href="https://patreon.com/noprojects">
-    <img src="img/patreon.png" width="40" height="40"></a></li>
-</div>
 
 </html>
