--- a/jj/jjito.html
+++ b/jj/jjito.html
@@ -1,4 +1,4 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
@@ -14,7 +14,7 @@
       <li><h2>NoProjects</h2></li>
       <li><a href="https://noprojects.net">Home</a></li>
       <li><a href="https://github.com/noprojects/noprojects.net">
-        Github</a></li>
+        GitHub</a></li>
       <li><a href="https://patreon.com/noprojects">
         Patreon</a></li>
       <li><h2>This site is <bold>UNFINISHED</bold>.</h2></li>
@@ -22,24 +22,37 @@
   </nav>
 </div>
 
-<body>
-  <br> <br> <br> <br>
+<div class="title">
+  <br><br><br><br>
   <img src="jjsportfolio.gif" alt="gif that says jjs portfolio">
+</div>
+
+<div class="projects">
+    <li><a href="https://www.youtube.com/watch?v=r2Qra7IfECo">
+      <img src="thumb.png" width="300" height="169"></a></li>
+    <p style="color:#494EF8;"> Here's a L4D2 video I made with Vito. </p>
+
+
+    <span style="border: 1px solid black">Replacement Text for a would-be MC build</span>
+
+
+    <span style="border: 1px solid black">Replacement Text for what would be another project. ;)</span>
+
+
+
+</div>
+
+<body>
   <p>Hi! My name is JJ(ito123 from the JJito123 steam profile). </p>
     <p>I am the tester for certain stuff the group makes 😎. </p>
     <p>You can find me playing Combat Warriors in Roblox
     or playing Minecraft. Here's a bit of the stuff I do sometimes. </p>
-
-    <br> <br>
-
-
-
-    <br> <br>
-  <p>USERNAMES I USUALLY USE ARE:
-    (jjito, jjit0, jjito0, jjito123) </p>
-  <li><a href="https://en.pronouns.page/@jjito">Pronouns page</a></li>
-  <br>
-
+    <p>USERNAMES I USUALLY USE ARE:
+      (jjito, jjit0, jjito0, jjito123) </p>
+    <li><a href="https://en.pronouns.page/@jjito">Pronouns page</a></li>
+    <br>
 </body>
+
+
 
 </html>
