--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>Main | NoProjects</title>
   <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="index.css">
+  
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="website title" />
+  <meta property="og:description" content="website description" />
+  <meta property="og:url" content="website url" />
+  <meta property="og:image" content="full thumbnail path" />
 </head>
 
 <body>
