--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
   <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="index.css">
   
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="website title" />
-  <meta property="og:description" content="website description" />
-  <meta property="og:url" content="website url" />
-  <meta property="og:image" content="full thumbnail path" />
+  <meta property="og:type" content="NoProjects">
+  <meta property="og:title" content="NoProjects" />
+  <meta property="og:description" content="NoProjects is some website made by a retard" />
+  <meta property="og:url" content="https://noprojects.net/" />
 </head>
 
 <body>
