--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Main | NoProjects</title>
   <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="index.css">
-  
+
   <meta property="og:type" content="NoProjects">
   <meta property="og:title" content="NoProjects" />
   <meta property="og:description" content="NoProjects is some website made by a retard" />
@@ -56,6 +56,7 @@
           <p>
             jj is some gay boy who helps test shit
           </p>
+          <a href="jj/jjito">link to his site</a>
         </div>
     </div>
 
