--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
         </div>
         <div class="who">
           <p>
-            jj is some gay boy who helps test shit
+            jj is some gay boy who helps test shit <a href="jj/jjito">link to his site</a>
           </p>
-          <a href="jj/jjito">link to his site</a>
         </div>
     </div>
 
