--- a/jj/jjito.html
+++ b/jj/jjito.html
@@ -5,6 +5,11 @@
     <meta charset="utf-8">
     <title>JJito | noprojects</title>
     <link rel="stylesheet" href="jjito.css">
+
+    <meta property="og:type" content="NoProjects">
+    <meta property="og:title" content="NoProjects | JJ" />
+    <meta property="og:description" content="JJs page" />
+    <meta property="og:url" content="https://noprojects.net/jj/jjito" />
 </head>
 
 <div class="header">
@@ -29,7 +34,7 @@
 
 <div class="projects">
     <li><a href="https://www.youtube.com/watch?v=r2Qra7IfECo">
-      <img src="thumb.png" width="300" height="169"></a></li>
+      <img src="shaggy.png" width="300" height="169"></a></li>
     <p style="color:#494EF8;"> Here's a L4D2 video I made with Vito. </p>
 
 
