--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
       <div class="who">
         <p>
-          vito is the stupidass who made this dum website
+          <a href="vito/vito">vito</a> is the stupidass who made this dum website
         </p>
       </div>
     </div>
@@ -54,7 +54,7 @@
         </div>
         <div class="who">
           <p>
-            jj is some gay boy who helps test shit <a href="jj/jjito">link to his site</a>
+            <a href="jj/jjito">jj</a> is some gay boy who helps test shit
           </p>
         </div>
     </div>
